data/derived/sp14/progs/unify/prog1311.ml.out
Characters 67-80:
  else n - (n/10) * 10 :: digitsOfInt n/10;;
                          ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
